🩹 Simple fix: titleのz-indexを修正

--- a/app/works/[slug]/page.module.scss
+++ b/app/works/[slug]/page.module.scss
@@ -1,6 +1,7 @@
 .titlewrap {
   padding: 3rem 1rem 0;
   position: relative;
+  z-index: -1;
 
   .titleimage {
     border-radius: 2rem 2rem 2rem 2rem;
